--- a/NLP_TagsPrediction.ipynb
+++ b/NLP_TagsPrediction.ipynb
@@ -51,21 +51,21 @@
         "from __future__ import division\n",
         "from __future__ import print_function\n",
         "import itertools\n",
-        "import os\n",
+        
         "\n",
-        "%matplotlib inline\n",
-        "import matplotlib.pyplot as plt\n",
+       
+        
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import tensorflow as tf\n",
+        
         "\n",
-        "from sklearn.preprocessing import LabelBinarizer, LabelEncoder\n",
-        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        
         "\n",
-        "from tensorflow import keras\n",
+      
         "from keras.models import Sequential\n",
         "from keras.layers import Dense, Activation, Dropout\n",
-        "from keras.preprocessing import text, sequence\n",
+        "from keras.preprocessing import text\n",
         "from keras import utils\n"
       ],
       "execution_count": 0,
